--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,81 +1,81 @@
 <section class="contacts">
-  <div class="container contacts-container">
+  <div class="container contacts__container">
     <h2 class="contacts__title visually-hidden">Контакты</h2>
 
     <div class="contacts__card">
-      <p class="contacts-representation">CAFE</p>
-      <div class="contacts-headline">
-        <p class="contacts-item">Chicago</p>
-        <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+      <p class="contacts__representation">CAFE</p>
+      <div class="contacts__headline">
+        <p class="contacts__item">Chicago</p>
+        <p class="contacts__pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
       </div>
-      <ul class="contacts-data">
-        <li class="contacts-day">
+      <ul class="contacts__data">
+        <li class="contacts__day">
           Monday - Friday
-          <p class="contacts-time">06:00 AM - 10:00 PM</p>
+          <p class="contacts__time">06:00 AM - 10:00 PM</p>
         </li>
-        <li class="contacts-day">
+        <li class="contacts__day">
           Saturday - Sunday
-          <p class="contacts-time">08:00 AM - 16:00 PM</p>
+          <p class="contacts__time">08:00 AM - 16:00 PM</p>
         </li>
       </ul>
-      <ul class="contacts-list list">
-        <li class="contacts-address">
-          <a class="contacts-tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
+      <ul class="contacts__list list">
+        <li class="contacts__address">
+          <a class="contacts__tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
         </li>
-        <li class="contacts-address">
-          <a class="contacts-mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
+        <li class="contacts__address">
+          <a class="contacts__mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
         </li>
       </ul>
     </div>
 
     <div class="contacts__card">
-      <p class="contacts-representation-truck">FOOD TRUCK</p>
-      <div class="contacts-headline">
-        <p class="contacts-item">Los Angeles</p>
-        <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+      <p class="contacts__representation-truck">FOOD TRUCK</p>
+      <div class="contacts__headline">
+        <p class="contacts__item">Los Angeles</p>
+        <p class="contacts__pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
       </div>
-      <ul class="contacts-data">
-        <li class="contacts-day">
+      <ul class="contacts__data">
+        <li class="contacts__day">
           Monday - Friday
-          <p class="contacts-time">06:00 AM - 10:00 PM</p>
+          <p class="contacts__time">06:00 AM - 10:00 PM</p>
         </li>
-        <li class="contacts-day">
+        <li class="contacts__day">
           Saturday - Sunday
-          <p class="contacts-time">08:00 AM - 16:00 PM</p>
+          <p class="contacts__time">08:00 AM - 16:00 PM</p>
         </li>
       </ul>
-      <ul class="contacts-list list">
-        <li class="contacts-address">
-          <a class="contacts-tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
+      <ul class="contacts__list list">
+        <li class="contacts__address">
+          <a class="contacts__tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
         </li>
-        <li class="contacts-address">
-          <a class="contacts-mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
+        <li class="contacts__address">
+          <a class="contacts__mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
         </li>
       </ul>
     </div>
 
     <div class="contacts__card">
-      <p class="contacts-representation">CAFE</p>
-      <div class="contacts-headline">
-        <p class="contacts-item">New York</p>
-        <p class="contacts-pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+      <p class="contacts__representation">CAFE</p>
+      <div class="contacts__headline">
+        <p class="contacts__item">New York</p>
+        <p class="contacts__pages">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
       </div>
-      <ul class="contacts-data">
-        <li class="contacts-day">
+      <ul class="contacts__data">
+        <li class="contacts__day">
           Monday - Friday
-          <p class="contacts-time">06:00 AM - 10:00 PM</p>
+          <p class="contacts__time">06:00 AM - 10:00 PM</p>
         </li>
-        <li class="contacts-day">
+        <li class="contacts__day">
           Saturday - Sunday
-          <p class="contacts-time">08:00 AM - 16:00 PM</p>
+          <p class="contacts__time">08:00 AM - 16:00 PM</p>
         </li>
       </ul>
-      <ul class="contacts-list list">
-        <li class="contacts-address">
-          <a class="contacts-tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
+      <ul class="contacts__list list">
+        <li class="contacts__address">
+          <a class="contacts__tel link" href="tel:+610383766284"> +61(0) 383 766 284</a>
         </li>
-        <li class="contacts-address">
-          <a class="contacts-mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
+        <li class="contacts__address">
+          <a class="contacts__mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
         </li>
       </ul>
     </div>
