--- a/src/sass/components/_customer-reviews.scss
+++ b/src/sass/components/_customer-reviews.scss
@@ -158,12 +158,57 @@
 }
 
 .review-text__gradient{
-  
- 
-  
+  display: inline;
   padding-bottom: 5px;
-  background-image: linear-gradient(to right, #E1E1E1, #E1E1E1 100%);
+
+  background: linear-gradient(to right, #E1E1E1, #E1E1E1);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
+}
+
+.slick-prev, .slick-next{
+
+
+background-color: #FAFAFA;
+width: 40px;
+height: 40px;
+border-radius: 50%;
+
+z-index: 5;
+}
+
+.slick-prev{
+  left: 1%;
+}
+.slick-next{
+  right: 1%;
+}
+.slick-prev::before,
+.slick-next::before{
+  content: '';
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin: 0 auto;
+  border-top: 3px solid $hover-red;
+  border-left: 3px solid $hover-red;
+  border-radius: 2px;
+}
+.slick-prev::before{
+  transform: rotate(-45deg);
+  margin-left: 11px;
+}
+.slick-next::before{
+  transform: rotate(135deg);
+  margin-right: 11px;
+}
+
+.slick-prev:hover,
+.slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
+  
+  background: $hover-grey;
+  box-shadow: 0px 3px 10px $hover-red;
 }
