--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,7 +10,7 @@
               ./images/products/desktop/webp/ice-cream1@1x.webp 1x,
               ./images/products/desktop/webp/ice-cream1@2x.webp 2x
             "
-            media="(min-width:1280px)"
+            media="(min-width:$desktop)"
             type="image/webp"
           />
           <source
@@ -18,7 +18,7 @@
               ./images/products/desktop/ice-cream1@1x.png 1x,
               ./images/products/desktop/ice-cream1@2x.png 2x
             "
-            media="(min-width:1280px)"
+            media="(min-width:$desktop)"
             type="image/png"
           />
 
@@ -27,7 +27,7 @@
               ./images/products/tablet/webp/ice-cream1@1x.webp 1x,
               ./images/products/tablet/webp/ice-cream1@2x.webp 2x
             "
-            media="(min-width:768px)"
+            media="(min-width:$tablet)"
             type="image/webp"
           />
           <source
@@ -35,7 +35,7 @@
               ./images/products/tablet/ice-cream1@1x.png 1x,
               ./images/products/tablet/ice-cream1@2x.png 2x
             "
-            media="(min-width:768px)"
+            media="(min-width:$tablet)"
             type="image/png"
           />
 
@@ -44,7 +44,7 @@
               ./images/products/mobile/webp/ice-cream1@1x.webp 1x,
               ./images/products/mobile/webp/ice-cream1@2x.webp 2x
             "
-            media="(max-width:767px)"
+            media="(max-width:$tablet)"
             type="image/webp"
           />
           <source
@@ -52,7 +52,7 @@
               ./images/products/mobile/ice-cream1@1x.png 1x,
               ./images/products/mobile/ice-cream1@2x.png 2x
             "
-            media="(max-width:767px)"
+            media="(max-width:$tablet)"
             type="image/png"
           />
 
@@ -83,7 +83,7 @@
               ./images/products/desktop/webp/ice-coffee2@1x.webp 1x,
               ./images/products/desktop/webp/ice-coffee2@2x.webp 2x
             "
-            media="(min-width:1280px)"
+            media="(min-width:$desktop)"
             type="image/webp"
           />
           <source
@@ -91,7 +91,7 @@
               ./images/products/desktop/ice-coffee2@1x.png 1x,
               ./images/products/desktop/ice-coffee2@2x.png 2x
             "
-            media="(min-width:1280px)"
+            media="(min-width:$desktop)"
             type="image/png"
           />
 
@@ -100,7 +100,7 @@
               ./images/products/tablet/webp/ice-coffee2@1x.webp 1x,
               ./images/products/tablet/webp/ice-coffee2@2x.webp 2x
             "
-            media="(min-width:1280px)"
+            media="(min-width:$desktop)"
             type="image/webp"
           />
           <source
@@ -108,7 +108,7 @@
               ./images/products/tablet/ice-coffee2@1x.png 1x,
               ./images/products/tablet/ice-coffee2@2x.png 2x
             "
-            media="(min-width:768px)"
+            media="(min-width:$tablet)"
             type="image/png"
           />
 
@@ -117,7 +117,7 @@
               ./images/products/mobile/webp/ice-coffee2@1x.webp 1x,
               ./images/products/mobile/webp/ice-coffee2@2x.webp 2x
             "
-            media="(max-width:767px)"
+            media="(max-width:$tablet)"
             type="image/webp"
           />
           <source
@@ -125,7 +125,7 @@
               ./images/products/mobile/ice-coffee2@1x.png 1x,
               ./images/products/mobile/ice-coffee2@2x.png 2x
             "
-            media="(max-width:767px)"
+            media="(max-width:$tablet)"
             type="image/png"
           />
 
@@ -154,7 +154,7 @@
               ./images/products/desktop/webp/milkshakes3@1x.webp 1x,
               ./images/products/desktop/webp/milkshakes3@2x.webp 2x
             "
-            media="(min-width:1280px)"
+            media="(min-width:$desktop)"
             type="image/webp"
           />
           <source
@@ -162,7 +162,7 @@
               ./images/products/desktop/milkshakes3@1x.png 1x,
               ./images/products/desktop/milkshakes3@2x.png 2x
             "
-            media="(min-width:1280px)"
+            media="(min-width:$desktop)"
             type="image/png"
           />
 
@@ -171,7 +171,7 @@
               ./images/products/tablet/webp/milkshakes3@1x.webp 1x,
               ./images/products/tablet/webp/milkshakes3@2x.webp 2x
             "
-            media="(min-width:768px)"
+            media="(min-width:$tablet)"
             type="image/webp"
           />
           <source
@@ -179,7 +179,7 @@
               ./images/products/tablet/milkshakes3@1x.png 1x,
               ./images/products/tablet/milkshakes3@2x.png 2x
             "
-            media="(min-width:768px)"
+            media="(min-width:$tablet)"
             type="image/png"
           />
 
@@ -188,7 +188,7 @@
               ./images/products/mobile/webp/milkshakes3@1x.webp 1x,
               ./images/products/mobile/webp/milkshakes3@2x.webp 2x
             "
-            media="(max-width:767px)"
+            media="(max-width:$tablet)"
             type="image/webp"
           />
           <source
@@ -196,7 +196,7 @@
               ./images/products/mobile/milkshakes3@1x.png 1x,
               ./images/products/mobile/milkshakes3@2x.png 2x
             "
-            media="(max-width:767px)"
+            media="(max-width:$tablet)"
             type="image/png"
           />
 
