--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,15 +1,3 @@
-.section {
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 120px;
-  padding-bottom: 98px;
-  background-color: $background-white;
-  @media screen and (min-width: $desktop) {
-    display: grid;
-    justify-content: center;
-  }
-}
-
 .addmargin {
   margin-bottom: 144px;
   font-style: normal;
@@ -18,14 +6,14 @@
   text-align: center;
   letter-spacing: 0.04em;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     margin-bottom: 180px;
 
     font-size: 48px;
     line-height: 55px;
     letter-spacing: 0.04em;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: $desktop) {
     margin-bottom: 250px;
     font-size: 58px;
     line-height: 66px;
@@ -46,12 +34,12 @@
   text-transform: uppercase;
 
   color: $text-color-pink;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     font-size: 26px;
     line-height: 30px;
     letter-spacing: 0em;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     font-size: 30px;
     line-height: 34px;
     letter-spacing: 0.04em;
@@ -66,10 +54,16 @@
   }
 }
 .products {
+  @media screen and (min-width: $mobile) {
+    width: 480px;
+  }
+
   @media screen and (min-width: $tablet) {
+    width: 720px;
     display: flex;
   }
   @media screen and (min-width: $desktop) {
+    width: 1080px;
     display: flex;
   }
   &__name {
@@ -126,7 +120,9 @@
 }
 
 .products__item {
-  width: 100%;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0px 0px 40px;
   border-radius: 15px;
   margin-bottom: 150px;
@@ -136,27 +132,20 @@
   }
 
   @media screen and (min-width: $mobile) {
-    width: 280px;
   }
   @media screen and (min-width: $tablet) {
-    width: 220px;
-    margin-right: 20px;
+    width: calc((100%-3 * 20) / 3);
+    margin-left: 10px;
+    margin-right: 10px;
     margin-bottom: 0px;
     padding: 0px 0px 40px;
-
-    &:last-child {
-      margin-right: 0px;
-    }
   }
   @media screen and (min-width: $desktop) {
-    width: 335px;
-    margin-right: 23px;
+    width: calc((100%-3 * 24) / 3);
+    margin-left: 12px;
+    margin-right: 12px;
     margin-bottom: 0px;
     padding: 0px 0px 40px;
-
-    &:last-child {
-      margin-right: 0px;
-    }
   }
 
   &.ice-cream {
@@ -184,14 +173,13 @@
   width: 100%;
   margin-top: -225px;
   margin-bottom: 38px;
-  @media screen and (min-width: 0px) and (max-width: 768px) {
-    margin-top: -130px;
+  @media screen and (min-width: 0px) and (max-width: $tablet) {
+    margin-top: -150px;
     margin-bottom: 22px;
   }
-  @media screen and (min-width: 768px) and (max-width: 1280px) {
-    max-width: 220px;
-    width: 220px;
-    height: 224px;
+  @media screen and (min-width: 768px) and (max-width: $desktop) {
+    width: 100%;
+
     margin-top: -140px;
     margin-bottom: 22px;
   }
