--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -96,12 +96,81 @@
   </div>
   <div class="backdrop-contacts is-hidden" contacts-franchise>
     <div class="contacts-modal">
-      <button type="button" class="modal__btn-close" contacts-franchise-close>
+      <button type="button" class="contacts__btn-close" contacts-franchise-close>
         <svg class="modal__icon--close" width="18" height="18">
           <use href="images/sprites.svg#close"></use>
         </svg>
       </button>
-      <h4>Only hand made</h4>
+      <form action="#" class="modal-form">
+        <p class="modal-form-head">Fill out the form to get about the terms of the franchise</p>
+        <label class="modal-form-field"
+          >Name
+          <span class="modal-form-wrapper">
+            <input
+              type="text"
+              class="modal-form-input"
+              name="user-name"
+              minlength="2"
+              pattern="[a-zA-Zа-яёА-ЯЁ]+"
+              title="Имя должно содержать символы кириллицы или латиницы"
+              required
+            />
+            <svg class="modal-form-icon" width="12" height="12">
+              <use href="/images/sprites.svg#icon-form-user"></use>
+            </svg>
+          </span>
+        </label>
+
+        <label class="modal-form-field"
+          >Tell
+          <span class="modal-form-wrapper">
+            <input
+              type="tel"
+              class="modal-form-input"
+              name="user-tel"
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+              title="099-999-99-99"
+              required
+            />
+            <svg class="modal-form-icon" width="13" height="13">
+              <use href="/images/sprites.svg#icon-form-tel"></use>
+            </svg>
+          </span>
+        </label>
+
+        <label class="modal-form-field"
+          >Mail
+          <span class="modal-form-wrapper">
+            <input
+              type="email"
+              class="modal-form-input"
+              name="user-email"
+              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+              title="mail@mail.com"
+              required
+            />
+
+            <svg class="modal-form-icon" width="15" height="12">
+              <use href="/images/sprites.svg#icon-form-mail"></use>
+            </svg>
+          </span>
+        </label>
+
+        <label class="modal-form-field"
+          >comment
+          <textarea
+            class="modal-form-message"
+            name="user-message"
+            placeholder="Enter text"
+          ></textarea>
+        </label>
+        <input type="checkbox" id="accept-policy" class="modal-form-checkbox visually-hidden" />
+        <label for="accept-policy" class="modal-form-check-box-label"
+          >I agree to the newsletter and accept&nbsp;
+          <a class="modal-form-chekbox-link" href="./index.html">Franchise terms</a></label
+        >
+        <button class="modal-form-button" type="submit">SEND</button>
+      </form>
     </div>
   </div>
 </section>
