--- a/src/sass/components/_contacts-modal.scss
+++ b/src/sass/components/_contacts-modal.scss
@@ -1,12 +1,12 @@
 .backdrop-contacts {
+  position: fixed;
   width: 100vw;
   height: 100vh;
-  border-radius: 4px;
-  position: absolute;
   background: rgba(0, 0, 0, 0.2);
+  z-index: 1003;
   top: 0;
-  position: fixed;
-  transition: opacity 500ms linear, visibility 500ms linear;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop-contacts.is-hidden {
@@ -14,7 +14,6 @@
   opacity: 0;
   pointer-events: none;
 }
-
 .contacts-modal {
   position: absolute;
   top: 50%;
@@ -24,17 +23,22 @@
   min-height: 581px;
   background-color: #ffffff;
   border-radius: 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
+    0px 2px 1px rgb(0 0 0 / 20%);
   padding: 40px;
 
-  @media screen and (min-width: 450px) {
-    width: 450px;
-    height: 609px;
+  @media screen and (min-width: 320px) and (max-width: 479px) {
+    width: 309px;
+    height: 644px;
+  }
+
+  @media screen and (min-width: $mobile) {
+    width: 430px;
+    height: 644px;
   }
 }
 
-.modal__btn-close {
+.contacts__btn-close {
   position: absolute;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: transparent;
@@ -53,4 +57,169 @@
   &:focus {
     color: $text-color-red;
   }
+}
+
+//
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-head {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.17;
+  text-align: center;
+  text-transform: uppercase;
+  color: #d41443;
+  margin-bottom: 20px;
+}
+
+.modal-form-field {
+  margin-bottom: 10px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: #757575;
+
+  &:nth-child(5) {
+    margin-bottom: 0px;
+  }
+}
+
+.modal-form-wrapper {
+  position: relative;
+  margin-top: 4px;
+  display: block;
+  transition: fill 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 30px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus {
+    outline: none;
+    border-color: #d41443;
+  }
+
+  &:focus + .modal-form-icon {
+    fill: #d41443;
+  }
+}
+
+.modal-form-message {
+  width: 100%;
+  height: 120px;
+  margin-top: 4px;
+  padding: 12px 16px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+
+  resize: none;
+
+  color: rgba(117, 117, 117, 0.5);
+
+  &:focus {
+    outline: none;
+    border-color: #d41443;
+  }
+}
+
+.modal-form-button {
+  border: none;
+  align-self: center;
+  cursor: pointer;
+  padding: 10px 55px;
+  margin-top: 30px;
+  font-family: inherit;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+
+  background: #d41443;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 14px;
+  transform: translateY(-50%);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-check-box-label {
+  display: flex;
+  margin-top: 20px;
+  align-items: center;
+  justify-content: center;
+  font-style: 400;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: #757575;
+
+  @media screen and (min-width: 320px) and (max-width: 479px) {
+    font-size: 8px;
+  }
+
+  @media screen and (min-width: $mobile) {
+    font-size: 12px;
+  }
+
+  &::before {
+    content: '';
+    display: block;
+    width: 16px;
+    height: 15px;
+    border: 2px solid #d41443;
+    cursor: pointer;
+    border-radius: 2px;
+    margin-right: 9px;
+
+    @media screen and (min-width: 320px) and (max-width: 479px) {
+      width: 12px;
+      height: 11px;
+    }
+  }
+}
+
+.modal-form-checkbox:checked + .modal-form-check-box-label::before {
+  background-color: #d41443;
+  border-color: #d41443;
+  background-image: url(/images/check.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-checkbox:focus + .modal-form-check-box-label::before {
+  border-color: #212121;
+}
+
+.modal-form-chekbox-link {
+  color: #d41443;
 }
