--- a/src/sass/components/_contacts-modal.scss
+++ b/src/sass/components/_contacts-modal.scss
@@ -19,8 +19,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
-  min-height: 581px;
+  // width: 528px;
+  // min-height: 581px;
   background-color: #ffffff;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
@@ -34,6 +34,11 @@
 
   @media screen and (min-width: $mobile) {
     width: 430px;
+    height: 644px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 528px;
     height: 644px;
   }
 }
@@ -186,6 +191,10 @@
 
   @media screen and (min-width: $mobile) {
     font-size: 12px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
   }
 
   &::before {
